fix alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -101,6 +101,7 @@ ul {
 h1,
 h2.main {
   font-size: $large;
+  text-align: center;
 }
 // Button
 .button {
